# GlobalSingleton

./: CMakeLists.txt
Common/: DllWrapper.hpp  GlobalSingletonContext.hpp
ExeDllSingleton/: CMakeLists.txt  Main.cpp
SingletonManager/: CMakeLists.txt  SingletonManager.cpp
TestDll1/: CMakeLists.txt
TestDll2/: CMakeLists.txt
